--- a/src/appComponents/YourAdd/YourAdd.css
+++ b/src/appComponents/YourAdd/YourAdd.css
@@ -5,7 +5,6 @@
     line-height: 25px;
     text-align: center;
     color: #474747;
-    padding-bottom: 10px;
 }
 
 .yourAdd_Note {
@@ -81,4 +80,8 @@
 .youAdd_PendingApproval {
     text-align: center;
     margin-top: 0.5rem;
+}
+
+.postAdvertBox{
+    margin-top: 18px;
 }
