--- a/src/appComponents/YourAdd/YourAdd.css
+++ b/src/appComponents/YourAdd/YourAdd.css
@@ -31,7 +31,7 @@
     font-size: 17px;
     line-height: 30px;
     text-align: center;
-    color: #e5dada;
+    color: #FFFFFF;
     margin-bottom: 0px;
 }
 
