working on manage open email field dynamically in deals module

--- a/src/appComponents/DealModule/LatestDeals/LatestDeals.css
+++ b/src/appComponents/DealModule/LatestDeals/LatestDeals.css
@@ -153,3 +153,8 @@ button.whatsApp svg {
     text-decoration: none !important;
     color: #000000;
 }
+
+.dealText a{
+ text-decoration: none !important;
+ color: #000000;
+}
