--- a/src/appComponents/DealTypesModule/CompanyData.module.css
+++ b/src/appComponents/DealTypesModule/CompanyData.module.css
@@ -39,10 +39,13 @@
     border-radius: 5.75997px;
     width: 100%;
     max-width: 150px;
+    min-width: 122px;
 }
 
 .productImg img {
+    width: 100%;
     max-width: 150px;
+    min-width: 122px;
 }
 
 .productDiscription {
@@ -54,7 +57,6 @@
     font-size: 22px;
     line-height: 27px;
     color: #000000;
-    line-break: anywhere;
 }
 
 .productDiscription p {
@@ -82,3 +84,4 @@
     margin-top: 30px;
     margin-bottom: 100px;
 }
+
