--- a/src/appComponents/DealsHeader/DealsHeader.css
+++ b/src/appComponents/DealsHeader/DealsHeader.css
@@ -20,8 +20,18 @@
     margin-right: 7px;
 }
 
-@media only screen and (max-width: 991px) {
+/* @media only screen and (max-width: 991px) {
     .navHeader .navbar-expand .navbar-nav {
         flex-direction: column !important;
     }
+} */
+
+@media only screen and (max-width: 576px) {
+    .navHeader .navbar-expand .navbar-nav {
+        flex-direction: column !important;
+    }
+}
+
+.ulValue1 {
+    flex-wrap: wrap;
 }
