--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -247,9 +247,10 @@
 }
 
 .classiFieds_bookmarkicon img {
-  width: 14px;
-  height: 20px;
-  margin-left: 10px;
+    width: 14px;
+    height: 20px;
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 .classiFields_shareMedia {
