changes in post advert module

--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -320,9 +320,9 @@
     background-color: #000000;
 }
 
-.post_Add_Save {
+/* .post_Add_Save {
     margin-top: 23px;
-}
+} */
 
 .post_Add_DeleteAdever button {
     height: 62px;
