--- a/src/appComponents/ClassiFieds/ClassifiedFilter.module.css
+++ b/src/appComponents/ClassiFieds/ClassifiedFilter.module.css
@@ -2,7 +2,7 @@
     background-color: #ffffff !important;
     border-radius: 10px;
     padding: 10px 24px;
-    margin-top: 11px;
+    margin-top: 20px;
     position: absolute;
     z-index: 9999;
     background: #FFFFFF;
@@ -90,6 +90,51 @@
     font-size: 0px;
 }
 
+/* .crossIcon{
+     color: #EC4624;
+    font-weight: 700;
+    background: #e9cec894;
+    padding: 6px;
+    width: 30px;
+    height: 34px;
+    border-radius: 50%;
+    margin-left: 15px;
+    cursor: pointer;
+    font-size: 0px;
+
+} */
+
+.CrossIcon{
+    display: flex;
+    justify-content: center;
+}
+
+/* .CrossIcon svg{
+    color: #EC4624;
+    font-weight: 700;
+    background: #e9cec894;
+    padding: 6px;
+    width: 30px;
+    height: 34px;
+    border-radius: 50%;
+    margin-left: 15px;
+    cursor: pointer;
+    font-size: 0px;
+} */
+
+
+.cancelIcon svg {
+    color: #EC4624;
+    font-weight: 700;
+    background: #e9cec894;
+    padding: 6px;
+    width: 30px;
+    height: 34px;
+    border-radius: 50%;
+    margin-left: 15px;
+    cursor: pointer;
+    font-size: 0px;
+}
 
 
 
@@ -119,3 +164,13 @@
     display: none !important;
 }
 
+/* svg.css-tj5bde-Svg {
+    display: none;
+    width: 100%;
+} */
+
+
+ input.form-control {
+    width: 100% !important;
+    max-width: 208px !important;
+}
