--- a/src/appComponents/ClassiFieds/ClassifiedFilter.module.css
+++ b/src/appComponents/ClassiFieds/ClassifiedFilter.module.css
@@ -1,202 +1,114 @@
 .filterBox {
-    background-color: #ffffff !important;
-    border-radius: 10px;
-    padding: 10px 24px;
-    margin-top: 20px;
-    position: absolute;
-    z-index: 9999;
-    background: #FFFFFF;
-    box-shadow: 4px 4px 10px rgb(123 123 123 / 25%);
-   
+  background-color: #ffffff !important;
+  border-radius: 10px;
+  padding: 10px 24px;
+  margin-top: 20px;
+  position: absolute;
+  z-index: 9999;
+  background: #ffffff;
+  box-shadow: 4px 4px 10px rgb(123 123 123 / 25%);
 }
 
-
 .optionBox input {
-    border: none !important;
-    padding: 5px 9px !important;
-    background-color: #EDEDED !important;
-    width: 100% !important;
-    border-radius: 8px !important;
-    width: 318px !important;
+  border: none !important;
+  padding: 5px 9px !important;
+  background-color: #ededed !important;
+  width: 100% !important;
+  border-radius: 8px !important;
+  width: 318px !important;
 }
 
 .optionBox {
-    background-color: #EDEDED;
-    padding: 2px 11px;
-    border-radius: 8px;
+  background-color: #ededed;
+  padding: 2px 11px;
+  border-radius: 8px;
 }
 
 .optionBox .inputBox {
-    border: none;
-    background-color: aliceblue;
-    border-radius: 8px;
-    width: 318px;
-    padding: 5px 9px;
+  border: none;
+  background-color: aliceblue;
+  border-radius: 8px;
+  width: 318px;
+  padding: 5px 9px;
 }
 
 .optionBox input::placeholder {
-   color: #000000;
-   font-size: 14px;
-   font-weight: 600;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 600;
 }
 
-
-.optionBox input:focus{
-    outline: none !important;
-    display: none !important;
-    border: none;
+.optionBox input:focus {
+  outline: none !important;
+  display: none !important;
+  border: none;
 }
-
-
 
 .ClassifiedFilter_inputBox__qFEo\+ input {
-    background-color: #EDEDED;
-    border: none;
-    border-radius: 8px;
+  background-color: #ededed;
+  border: none;
+  border-radius: 8px;
 }
-
 
 /* searchbar css */
 
 .ClassifiedsearchBar {
-    display: flex;
-    margin-top: 15px;
+  display: flex;
+  margin-top: 15px;
 }
 
 .ClassifiedsearchBar .form-control {
-    border: none !important;
-    box-shadow: none !important;
-    font-size: 14px;
-    font-weight: 400;
-    background: #FAFAFA;
-    border-radius: 4px;
-    height: 40px;
+  border: none !important;
+  box-shadow: none !important;
+  font-size: 14px;
+  font-weight: 400;
+  background: #fafafa;
+  border-radius: 4px;
+  height: 40px;
 }
 
 .ClassifiedsearchBar .form-control:focus {
-    border: none !important;
+  border: none !important;
 }
 
 .ClassifiedsearchBar svg {
-    color: #EC4624;
-    font-weight: 700;
-    background: #e9cec894;
-    padding: 6px;
-    width: 30px;
-    height: 34px;
-    border-radius: 50%;
-    margin-left: 15px;
-    cursor: pointer;
-    font-size: 0px;
+  color: #ec4624;
+  font-weight: 700;
+  background: #e9cec894;
+  padding: 6px;
+  width: 30px;
+  height: 34px;
+  border-radius: 50%;
+  margin-left: 15px;
+  cursor: pointer;
+  font-size: 0px;
 }
 
-/* .crossIcon{
-     color: #EC4624;
-    font-weight: 700;
-    background: #e9cec894;
-    padding: 6px;
-    width: 30px;
-    height: 34px;
-    border-radius: 50%;
-    margin-left: 15px;
-    cursor: pointer;
-    font-size: 0px;
-
-} */
-
-.CrossIcon{
-    display: flex;
-    justify-content: center;
+.CrossIcon {
+  display: flex;
+  justify-content: center;
 }
-
-/* .CrossIcon svg{
-    color: #EC4624;
-    font-weight: 700;
-    background: #e9cec894;
-    padding: 6px;
-    width: 30px;
-    height: 34px;
-    border-radius: 50%;
-    margin-left: 15px;
-    cursor: pointer;
-    font-size: 0px;
-} */
-
 
 .cancelIcon svg {
-    color: #EC4624;
-    font-weight: 700;
-    background: #e9cec894;
-    padding: 6px;
-    width: 30px;
-    height: 34px;
-    border-radius: 50%;
-    margin-left: 15px;
-    cursor: pointer;
-    font-size: 0px;
+  color: #ec4624;
+  font-weight: 700;
+  background: #e9cec894;
+  padding: 6px;
+  width: 30px;
+  height: 34px;
+  border-radius: 50%;
+  margin-left: 15px;
+  cursor: pointer;
+  font-size: 0px;
 }
-
-
 
 .mb-3 input {
-    background-color: #EDEDED !important;
-    border: none !important;
-    width: 318px !important;
+  background-color: #ededed !important;
+  border: none !important;
+  width: 318px !important;
 }
-
-/* .inputBox .form-control:focus {
-    background-color: #f5f5f5 !important;
-    outline: none !important;
-    border: none !important;
-    box-shadow: none;
-}
-
-.inputBox .form-control::placeholder {
-    color: #000000 !important;
-    font-size: 15px;
-    font-weight: 400;
-}
-
-.selectOption .css-tj5bde-Svg {
-    fill: #000000 !important;
-    width: 28px !important;
-    height: 28px !important;
-    display: none !important;
-} */
-
-/* svg.css-tj5bde-Svg {
-    display: none;
-    width: 100%;
-} */
-
-
- /* input.form-control {
-    width: 100% !important;
-    max-width: 208px !important;
-} */
-
-
-
-/* .inputBox .css-13cymwt-control {
-    border: none !important;
-    height: 40px !important;
-    background: #FFFFFF !important;
-    box-shadow: 2.42px 4.84px 12.1px rgb(0 0 0 / 6%) !important;
-    border-radius: 7.26px !important;
-    font-weight: 500 !important;
-    font-size: 16.94px !important;
-} */
-
-
 
 .inputBox__qFEo\+ {
-    width: 100% !important;
-    min-width: 364px !important;
+  width: 100% !important;
+  min-width: 364px !important;
 }
-
-
-/* .inputBox__qFEo\+ {
-    width: 100%;
-    max-width: 264px;
-    min-width: 382px;
-} */
