--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -44,3 +44,8 @@
     max-width: 342px !important;
     height: 302px;
 }
+
+.inputBox .css-b62m3t-container{
+    width: 100%;
+    min-width: 300px;
+}
