--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -246,12 +246,12 @@
   margin-right: 10px;
 }
 
-.classiFieds_bookmarkicon img {
+/* .classiFieds_bookmarkicon img {
     width: 14px;
     height: 20px;
     margin-left: 10px;
     cursor: pointer;
-}
+} */
 
 .classiFields_shareMedia {
   height: 66px;
