--- a/src/appComponents/CommonModule/CommonModule.css
+++ b/src/appComponents/CommonModule/CommonModule.css
@@ -9,12 +9,12 @@
     margin-right: 15px;
 }
 
-.mapBox {
+ .mapBox {
     width: 100%;
     height: 221px;
     background-color: #777777;
     margin-top: 10px;
-}
+} 
 
 .mapDetails {
     background-color: #F1F1F1;
@@ -88,16 +88,15 @@
 
 /* =====Responsive====== */
 
-@media screen and (max-width: 445px) {
+@media screen and (max-width: 340px) {
     .socialShare img {
-        width: 40px;
+        width: 41px !important;
         margin-right: 15px;
     }
 }
 
-@media screen and (max-width: 340px) {
-    .socialShare img {
-        width: 35px;
-        margin-right: 15px;
-    }
+.mapBoxCls .map-container{
+    width: 100% !important;
+    height: 221px !important;
+    margin-top: 10px !important;
 }
