--- a/src/appComponents/DealModule/LatestDealList/LatestDealList.css
+++ b/src/appComponents/DealModule/LatestDealList/LatestDealList.css
@@ -140,3 +140,11 @@
 .dealDetailsList {
     margin-top: 10px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 400px) {
+    .brandType p {
+        padding: 5px 13px !important;
+        font-weight: 600;
+        font-size: 16px !important;
+    }
+}
