post advert select input issue solve

--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -216,17 +216,17 @@
 }
 
 
-.post_AddForm #countries .css-13cymwt-control {
+.post_AddForm #country .css-13cymwt-control {
     color: black !important;
     border-radius: 10px;
 }
 
-.post_AddForm #countries .css-t3ipsp-control {
+.post_AddForm #country .css-t3ipsp-control {
     color: black !important;
     border-radius: 10px;
 }
 
-.post_AddForm #countries .css-tj5bde-Svg {
+.post_AddForm #country .css-tj5bde-Svg {
     fill: black !important;
 }
 
