--- a/src/appComponents/DealModule/LatestDealList/LatestDealList.css
+++ b/src/appComponents/DealModule/LatestDealList/LatestDealList.css
@@ -127,14 +127,19 @@
     margin-bottom: 10px;
 }
 
-.latestDeals .watsappCls img {
-    width: unset !important;
+.latestDeals .watsappCls svg {
+    height: 28px;
+    width: 28px;
 }
 
 .latestDeals .watsappCls span {
     font-weight: 500 !important;
     font-size: 19.2px !important;
     line-height: 21px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 6px;
 }
 
 .dealDetailsList {
