--- a/src/authComponents/Login/LoginForm/LoginForm.css
+++ b/src/authComponents/Login/LoginForm/LoginForm.css
@@ -78,7 +78,7 @@ button.btn:active {
     position: relative;
     padding-left: 32px;
     cursor: pointer;
-    line-height: 25px;
+    /* line-height: 25px; */
     display: inline-block;
     color: #666;
     padding-right: 20px;
