--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -15,9 +15,9 @@
   margin-bottom: 0px !important;
 }
 
-.classiFieds_forSale_about>div {
+/* .classiFieds_forSale_about>div {
   margin-right: 10px;
-}
+} */
 
 .classiFieds_forSale_about .classiFieds_forSale {
   display: flex;
@@ -32,12 +32,13 @@
   font-weight: 600;
   border-radius: 5px;
   box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
+  margin-right: 15px;
 }
 
 .classiFieds_forSale_about .classiFields_heading .text {
   font-weight: 500;
   font-size: 20px;
-  line-height: 26px;
+  line-height: 22px;
   color: #000000;
   margin-bottom: 5px;
   margin-left: 5px;
@@ -45,14 +46,15 @@
 
 .classiFieds_forSale_about .classiFields_heading {
   margin-top: 10px;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   width: 100%;
 }
 
 .classiFieds_forSale_about .classiFieds_time_action {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
+  margin-top: 10px;
 }
 
 .classiFieds_forSale_about .classiFieds_time_action .classiFieds_forSale_button {
@@ -90,9 +92,9 @@
   cursor: pointer;
 }
 
-.classiFields_contactPerson .classiFields_PersonAboutShow>div {
+/* .classiFields_contactPerson .classiFields_PersonAboutShow>div {
   margin-right: 15px;
-}
+} */
 
 .classiFields_PersonAboutShow p {
   margin-bottom: 0px;
@@ -147,13 +149,14 @@
 }
 
 .classiFieds_time span {
-  padding-left: 10px;
+  /* padding-left: 10px; */
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
   letter-spacing: -0.3px;
   color: #000000;
-  margin: 4px;
+  /* margin: 4px; */
+  margin-left: 7px;
 }
 
 .classiFieds_time span img {
@@ -198,14 +201,17 @@
   font-weight: 400;
   line-height: 23px;
   letter-spacing: -0.3px;
+  margin-top: 10px;
 }
 
 .classiFields_iconBackGround {
-  width: 42px;
+  width: 100%;
+  max-width: 42px;
   height: 41px;
   background: #e5e5e5;
   mix-blend-mode: multiply;
   border-radius: 6px;
+  margin-right: 15px;
 }
 
 .classiFields_whatAppIcon {
@@ -237,6 +243,7 @@
 .classiFields_shareicons img {
   width: 48px;
   height: 48px;
+  margin-left: 5px;
 }
 
 .classiFields_shareIcon p {
@@ -286,6 +293,7 @@
   }
 }
 
+/* 
 @media only screen and (max-width: 480px) {
   .classiFieds_forSale_about .classiFieds_forSale img {
     width: 116.83px;
@@ -447,13 +455,13 @@
     height: 2.68px;
     margin: 3px;
   }
-}
+} */
 
-@media only screen and (max-width: 349px) {
+/* @media only screen and (max-width: 349px) {
   .classiFieds_time span {
     padding-left: 3px;
   }
-}
+} */
 
 @media only screen and (max-width: 377px) {
   .classiFields_advertise {
@@ -507,12 +515,12 @@
 }
 
 .nodataDisplay {
-  margin-top: 16px;
-  display: flex;
-  padding: 9px 148px;
-  width: 100%;
-  font-size: 20px;
+  margin-top: 20px;
   font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  letter-spacing: -0.315px;
   color: #000000;
 }
 
@@ -537,9 +545,6 @@
 .classiFields_emailHeadingText a {
   text-decoration: none;
   color: #000000;
-  font-weight: 400;
-  font-size: 16.5px;
-  line-height: 25px;
 }
 
 .classiFields_emailHeadingText p {
@@ -550,8 +555,40 @@
 }
 
 .classiFields_emailHeadingText span {
-  color: #000000;
   font-weight: 400;
   font-size: 16.5px;
-  line-height: 25px;
+  line-height: 4px;
+  line-break: anywhere;
+}
+
+.classiFieds_countryName {
+  margin-top: 10px;
+}
+
+@media only screen and (max-width: 480px) {
+  .classiFieds_forSale_about .classiFieds_forSale img {
+    width: 116.83px;
+    height: 110.62px;
+  }
+
+  .classiFieds_forSale_about .classiFieds_time_action .classiFieds_forSale_button {
+    width: 80.63px;
+  }
+
+}
+
+@media only screen and (max-width: 380px) {
+  .classiFields_shareicons img {
+    width: 32.12px;
+    height: 32.12px;
+    margin-left: 2px;
+  }
+
+  .classiFieds_countryName span {
+    font-size: 12px;
+  }
+
+  .classiFields_emailHeadingText span {
+    font-size: 13.5px;
+  }
 }
