--- a/src/authComponents/Login/Login.css
+++ b/src/authComponents/Login/Login.css
@@ -86,3 +86,14 @@
     cursor: pointer;
     margin-top: 36px;
 }
+
+
+@media screen and (min-width: 320px) and (max-width: 325px) {
+    .accountType p {
+        font-size: 13px;
+    }
+
+    .accountType span {
+        font-size: 13px;
+    }
+}
