--- a/src/authComponents/Login/LoginForm/LoginForm.css
+++ b/src/authComponents/Login/LoginForm/LoginForm.css
@@ -40,7 +40,7 @@
     font-weight: 400;
     color: #242424;
     margin-bottom: 0px;
-    margin-top: 4px;
+    margin-top: 5px;
     cursor: pointer;
 }
 
@@ -169,7 +169,7 @@
     }
 }
 
- @media screen and (min-width: 368px) and (max-width: 387px) {
+@media screen and (min-width: 368px) and (max-width: 387px) {
     .forgotCls h6 {
         font-size: 13px !important;
     }
@@ -182,12 +182,62 @@
     .customCheck [type="checkbox"]:not(:checked)+label {
         padding-left: 28px;
     }
-} 
+}
 
-@media screen and (min-width: 367px) and (max-width: 379px) {
-    .LoginText p {
-        font-size: 13px !important;
-        margin-right: 7px !important;
-        margin-left: 7px !important;
+@media screen and (min-width: 356px) and (max-width: 367px) {
+    .forgotCls h6 {
+        margin-top: 1px;
+        margin-left: 48px;
+        line-height: 21px;
+    }
+
+    .customCheck [type="checkbox"]:checked+label,
+    .customCheck [type="checkbox"]:not(:checked)+label {
+        line-height: unset;
+    }
+}
+
+@media screen and (min-width: 345px) and (max-width: 355px) {
+    .forgotCls h6 {
+        margin-top: 1px;
+        margin-left: 34px;
+        line-height: 21px;
+    }
+
+    .customCheck [type="checkbox"]:checked+label,
+    .customCheck [type="checkbox"]:not(:checked)+label {
+        line-height: unset;
+    }
+}
+
+@media screen and (min-width: 330px) and (max-width: 344px) {
+    .forgotCls h6 {
+        margin-top: 1px;
+        margin-left: 22px;
+        line-height: 21px;
+    }
+
+    .customCheck [type="checkbox"]:checked+label,
+    .customCheck [type="checkbox"]:not(:checked)+label {
+        line-height: unset;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 329px) {
+    .forgotCls h6 {
+        margin-top: 1px;
+        margin-left: 9px;
+        line-height: 21px;
+    }
+
+    .customCheck [type="checkbox"]:checked+label,
+    .customCheck [type="checkbox"]:not(:checked)+label {
+        line-height: unset;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 378px) {
+    .LoginText span {
+        width: 55px;
     }
 }
