--- a/src/authComponents/Login/Login.css
+++ b/src/authComponents/Login/Login.css
@@ -97,3 +97,59 @@
         font-size: 13px;
     }
 }
+
+@media screen and (min-width: 376px) and (max-width: 390px) {
+    .loginComponents h3 {
+        font-size: 15px;
+    }
+
+    .loginComponents img {
+        margin-right: 20px;
+    }
+}
+
+@media screen and (min-width: 351px) and (max-width: 375px) {
+    .loginComponents {
+        padding: 5px 10px;
+    }
+
+    .loginComponents img {
+        margin-right: 15px;
+    }
+
+    .loginComponents h3 {
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 340px) and (max-width: 350px) {
+    .loginComponents {
+        padding: 5px 10px;
+    }
+
+    .loginComponents img {
+        width: 54px;
+        height: 54px;
+        margin-right: 10px;
+    }
+
+    .loginComponents h3 {
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 339px) {
+    .loginComponents {
+        padding: 5px 7px;
+    }
+
+    .loginComponents img {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+    }
+
+    .loginComponents h3 {
+        font-size: 14px;
+    }
+}
