--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -14,7 +14,7 @@
     background: #DEDEDE;
     color: #231F20;
     border-radius: 10px;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 22px;
     line-height: 25px;
     text-align: center;
@@ -51,7 +51,6 @@
     gap: 9px 0px;
     width: 267px;
     margin: auto;
-
 }
 
 
@@ -61,7 +60,7 @@
     position: relative !important;
     background: #FFFFFF;
     border: none !important;
-    box-shadow: 0px 2px 10px rgb(0 0 0 / 11%);
+    box-shadow: 0px 2px 10px rgb(0 0 0 / 11%) !important;
     cursor: pointer;
 }
 
@@ -129,8 +128,8 @@
 
 .post_Add_CategoryButton .post_AddForm .post_Add_category .form-check-input[type=radio]:checked::after {
     content: '';
-    width: 20px !important;
-    height: 20px !important;
+    width: 18px !important;
+    height: 18px !important;
     background: #EC4624 !important;
     position: absolute !important;
     border-radius: 50% !important;
